			them.
[new]:		Errors::ignore and Errors::unignore, to turn error reporting on and off.
[fixed]:	Hooks Controller.beforeConstruct, Controller.afterConstruct and Controller.after
			were not working correctly.
[fixed]:	Smarty extender now hooks correctly into the core.
[fixed]:	Default configuration settings now more appropriate.


<11th August 2010>
-----------------------------------------------
[changed]:	Update the MySQL class, changed name to DBDriver to allow multiple drivers.
[new]:		Added PDO support, to allow a better database layer for portability of applications.
			If PDO is unavailable it will revert to the generic classes that were created.

<7th August 2010>
-----------------------------------------------
[changed]:	Controllers can now be placed at any depth within /application/controllers
[changed]:	Controllers no longer require the directories to be prepended to the class
			name of the controller.

<5th August 2010>
-----------------------------------------------
[changed]:	Router class changed to support user-defined routes to prevent bad URLs.
[new]:		Request class handles input request, special requests and URL building.
[changed]:	Error template is now it's own template, not part of a template.
[fixed]:	User defined routes can now specify controllers in subdirectories.
[new]:		URI can be constructed from a route.
[fixed]:	General.default_controller was not being used in the default route.
[fixed]:	All bugs inside HTML Helper.

<4th August 2010>
-----------------------------------------------
[new]:		Inflector class added.
[changed]:	What were plugins are now called extenders. Plugins have been redone.
[new]:		Extender class added.
[new]:		Thumbnail plugin created, this is more of an example plugin.

<3rd August 2010>
-----------------------------------------------
[changed]:	Folder structure has been updated to allow better understanding of where
			things should belong.